[package]
name = "slab"
edition = "2018"
version = "0.4.2"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = "Pre-allocated storage for a uniform data type"
documentation = "https://docs.rs/slab/0.4.2/slab/"
homepage = "https://github.com/carllerche/slab"
repository = "https://github.com/carllerche/slab"
readme = "README.md"
keywords = ["slab", "allocator"]
categories = ["memory-management", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }